<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 22/4/2022.
  ~ Copyright (c) 2022.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.InfoFragment">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:text="@string/temperature" />

            <TextView
                android:id="@+id/tvHum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/tvSoil"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:text="@string/soil" />

            <TextView
                android:id="@+id/tvLight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:text="@string/light" />
        </LinearLayout>
    </HorizontalScrollView>


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp" />
</LinearLayout>