<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="135dp"
    tools:context=".ui.main.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="85dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/card_item"
                    android:layout_marginHorizontal="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <ImageView
                            style="@style/icon_item"
                            android:src="@drawable/ic_grape_color" />

                        <TextView
                            android:id="@+id/title_temperature"
                            style="@style/title_item"
                            android:text="@string/temperature" />

                        <TextView
                            android:id="@+id/value_temperature"
                            style="@style/value_item"
                            android:text="@string/dash" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/card_item"
                    android:layout_marginHorizontal="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <ImageView
                            style="@style/icon_item"
                            android:src="@drawable/ic_grape_color" />

                        <TextView
                            android:id="@+id/title_humidity"
                            style="@style/title_item"
                            android:text="@string/humidity" />

                        <TextView
                            android:id="@+id/value_humidity"
                            style="@style/value_item"
                            android:text="@string/dash" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/card_item"
                    android:layout_marginHorizontal="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <ImageView
                            style="@style/icon_item"
                            android:padding="3dp"
                            android:src="@drawable/ic_grape_color" />

                        <TextView
                            android:id="@+id/title_ph"
                            style="@style/title_item"
                            android:text="@string/ph" />

                        <TextView
                            android:id="@+id/value_ph"
                            style="@style/value_item"
                            android:text="@string/dash" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/card_item"
                    android:layout_marginHorizontal="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <ImageView
                            style="@style/icon_item"
                            android:src="@drawable/ic_grape_color" />

                        <TextView
                            android:id="@+id/title_tds"
                            style="@style/title_item"
                            android:text="@string/tds" />

                        <TextView
                            android:id="@+id/value_tds"
                            style="@style/value_item"
                            android:text="@string/dash" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/card_item"
                    android:layout_marginHorizontal="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <ImageView
                            style="@style/icon_item"
                            android:padding="2dp"
                            android:src="@drawable/ic_grape_color" />

                        <TextView
                            style="@style/title_item"
                            android:text="@string/water" />

                        <TextView
                            style="@style/value_item"
                            android:text="@string/dash" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/card_item"
                    android:layout_marginHorizontal="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <ImageView
                            style="@style/icon_item"
                            android:padding="2dp"
                            android:src="@drawable/ic_grape_color" />

                        <TextView
                            android:id="@+id/title_water"
                            style="@style/title_item"
                            android:text="@string/water" />

                        <TextView
                            android:id="@+id/value_water"
                            style="@style/value_item"
                            android:text="@string/dash" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginHorizontal="46dp"
        app:cardCornerRadius="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_grape_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:lines="2"
                    android:paddingHorizontal="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/dark_icon"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:background="@color/secondary_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp">


            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>