<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradasi"
    tools:context=".ui.main.MainActivity">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selamat Malam"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_malam" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTime"
            android:layout_marginTop="4dp"
            android:text="Andriansyah Anwar"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="@string/home"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@id/appBar"
        android:layout_marginHorizontal="46dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_grape_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:lines="2"
                    android:paddingHorizontal="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/primary_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:background="@color/secondary_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_calender_color" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="end"
                    android:lines="2"
                    android:text="@string/date_and_time"
                    android:textColor="@color/dark_icon"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_clock"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="100dp"
                    android:src="@drawable/ic_clock_color" />

                <ImageView
                    android:id="@+id/img_date"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/img_clock"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_calender_2_color" />

                <TextView
                    android:id="@+id/value_clock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_date"
                    android:layout_alignTop="@+id/img_clock"
                    android:layout_alignBottom="@+id/img_clock"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/img_clock"
                    android:text="@string/dash"
                    android:textColor="@color/dark_icon" />

                <TextView
                    android:id="@+id/value_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/img_date"
                    android:layout_alignBottom="@+id/img_date"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/img_date"
                    android:text="@string/dash"
                    android:textColor="@color/dark_icon" />

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navBottom"
        android:layout_marginTop="16dp"
        android:layout_below="@id/dashboard">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/navBottom"
            android:layout_below="@id/dashboard"
            app:defaultNavHost="true"
            app:navGraph="@navigation/my_nav" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:menu="@menu/nav_bottom" />

</RelativeLayout>